# barista

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: agentic-workflows.instructions.md
.github/workflows/: ci.yml
.tasks/: setup-repo.sh
src/barista/: __init__.py  greet.py
tests/: test_greet.py
